# learn-yew-rust

./: Cargo.toml  MakeFile  README.md  index.html  styles.css  tailwind.css
src/: app.rs  editor.rs  lib.rs  main.rs
src/app/: video_list.rs
src/editor/: drag_handler.rs  initial_value.rs  initial_value_handler.rs
