[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"


[lib]
# You should include "rlib" (the default crate type) otherwise your crate can't be used as a Rust library
# which, among other things, breaks unit testing
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
html-minifier = "3.0.15"

[dependencies.web-sys]
version = "0.3"
features = ["console"]  # Do you have this line in your Cargo.toml?
js-sys = "0.3"
gloo = "0.6"
wasm-bindgen = "0.2"